objects/DMAPP__Insight_Smart_Business_Map_Smart_Node__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Business_Map__c</fullName>
        <label>Insight Smart Business Map</label>
        <referenceTo>DMAPP__Insight_Smart_Business_Map__c</referenceTo>
        <relationshipLabel>Insight Smart Business Map Smart Nodes</relationshipLabel>
        <relationshipName>Insight_Smart_Business_Map_Smart_Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Node__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insight Smart Node</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipLabel>Insight Smart Business Map Smart Nodes</relationshipLabel>
        <relationshipName>Insight_Smart_Business_Map_Smart_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insight Smart Business Map Smart Node</label>
    <nameField>
        <displayFormat>ISBMSN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Smart Business Map Smart Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>